[package]
name = "kintsugi"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jane-eyre = "0.1"
reqwest = { version= "0.10", features = ["blocking", "json"] }
semver = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.1"
url_serde = "0.2"
